appgw/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: robot-ing
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
